Finished applying AES encryption to playground

--- a/ransomware/first-c/playground/Makefile
+++ b/ransomware/first-c/playground/Makefile
@@ -1,2 +1,2 @@
 playground:
-	gcc ./src/main.c ./src/reduntant/reduntant.c ./src/encryption/encryption.c -o ./bin/ransom
+	gcc ./src/main.c ./src/reduntant/reduntant.c ./src/encryption/encryption.c ./src/encryption/AES/AES.c -o ./bin/ransom -lcrypto
